--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "live-server": "^1.2.2"
   },
   "dependencies": {
-    "gardevoir": "^1.0.0"
+    "gardevoir": "^1.0.0",
+    "the-new-css-reset": "^1.8.4"
   }
 }
