--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "scripts": {
-    "start": "live-server --port=8080 --host=127.0.0.1 --browser=CHROME --open=./src/ --watch=./src/ --entry-file=./src/index.html --no-css-inject --wait=500"
+    "start": "concurrently --kill-others --names \"SASS,LiveServer\" --prefix \"[{name}]\" --prefix-colors \"bgCyan.bold,bgMagenta.bold\" --max-processes=\"50%\" \"sass --watch --no-unicode ./src/scss:./src/public/dist/css\" \"live-server --port=8080 --host=127.0.0.1 --browser=CHROME --ignore=./src/scss/ --watch=./src/public/ --open=./src/public/ --entry-file=./src/public/index.html --no-css-inject --wait=500\""
   },
   "devDependencies": {
-    "live-server": "^1.2.2"
+    "concurrently": "^8.0.1",
+    "live-server": "^1.2.2",
+    "sass": "^1.60.0"
   },
   "dependencies": {
     "gardevoir": "^1.0.0",
